--- a/asmcomp/amd64/BUILD.bazel
+++ b/asmcomp/amd64/BUILD.bazel
@@ -9,14 +9,15 @@ exports_files([
 # 	$(OCAMLRUN) $(cvt_emit) < $< >> $@ \
 # 	|| { rm -f $@; exit 2; }
 
+ ## fixme: find a way to use the toolchain, w/o bootstrapping
 genrule(
     name = "emit_ml",
-    srcs = ["emit.mlp", "//tools:cvt_emit.exe"],
+    srcs = ["emit.mlp", "//tools:cvt_emit"],
     outs = ["emit.ml"],
-    tools = ["//boot/baseline:ocamlrun"], ## fixme: find a way to use the toolchain
+    tools = ["//boot/baseline:ocamlrun"],
     cmd  = "\n".join([
 	    "echo '# 1 \"amd64/emit.mlp\"' > $@;",
-        "$(execpath //boot/baseline:ocamlrun) $(location //tools:cvt_emit.exe) < $(location :emit.mlp) >> $@"
+        "$(execpath //boot/baseline:ocamlrun) $(location //tools:cvt_emit) < $(location :emit.mlp) >> $@"
     ]),
     visibility = ["//asmcomp:__pkg__"]
 )
