--- a/toolchain/selectors/BUILD.bazel
+++ b/toolchain/selectors/BUILD.bazel
@@ -15,7 +15,7 @@ exports_files(glob(["*.bazel"]))
 #     name           = "bootstrap",
 #     type           = "//toolchain/type:boot",
 #     adapter        = "//toolchain/adapters/boot",
-#     # toolchain_constraints   = [
+#     # target_host_configuration   = [
 #     #     "//platform/build:boot?",
 #     #     # "//platform/target:vm?"
 #     # ]
@@ -38,7 +38,7 @@ toolchain_selector(
     adapter        = "//toolchain/adapters/baseline",
     build_host_constraints  = ["//platform/build:vm?"],
     # target_host_constraints = ["//platform/target:vm?"],
-    # toolchain_constraints   = ["//platform/xtarget:sys?"]
+    # target_host_configuration   = ["//platform/xtarget:sys?"]
 )
 
 # ##########
@@ -56,6 +56,6 @@ toolchain_selector(
 #     toolchain = "//toolchain/adapters:vmsys",
 #     build_host_constraints  = ["//platform:sys?"],
 #     target_host_constraints  = ["//platform:vm?"],
-#     # toolchain_constraints = ["//runtime:standard?"],
+#     # target_host_configuration = ["//runtime:standard?"],
 # )
 
