--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -45,13 +45,14 @@ register_execution_platforms(
     # IMPORTANT: ordered by constraint "strength" - more constraints
     # before fewer.
 
-    "//platform/ocaml:sys_vm_vm",
-    "//platform/ocaml:sys_vm_sys",
-    "//platform/ocaml:sys_sys_sys",
-    "//platform/ocaml:sys_sys_vm",
+    "//platform/ocaml:sys_vm",
+    "//platform/ocaml:sys_sys",
 
+    # "//platform/ocaml:sys_vm_vm",
+    # "//platform/ocaml:sys_vm_sys",
     # "//platform/ocaml:sys_sys_sys",
-    # "//platform/ocaml:sys_sys_vm"
+    # "//platform/ocaml:sys_sys_vm",
+
 
     # "//platform/ocaml:vm",
     # "//platform/ocaml:sys",
@@ -65,8 +66,14 @@ register_execution_platforms(
 # register_toolchains("@ocaml//toolchain/selectors/local:vmvm")
 register_toolchains(
 
-    "//boot/toolchain/selector:vmvm",
-    "//boot/toolchain/selector:vmsys",
+    "//boot/toolchain/selector:vv_vv",
+    "//boot/toolchain/selector:vv_vs",
+
+    "//boot/toolchain/selector:vs_ss",
+    "//boot/toolchain/selector:vs_sv",
+
+    # "//boot/toolchain/selector:vmvm",
+    # "//boot/toolchain/selector:vmsys",
 
     # "//boot/toolchain/selector:boot",
 
