--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -60,5 +60,8 @@ config_setting(name = "macos_arm64?",
 config_setting(name = "windows_x86_32?",
                constraint_values = ["@platforms//cpu:x86_32",
                                     "@platforms//os:windows"])
+config_setting(name = "windows_x86_64?",
+               constraint_values = ["@platforms//cpu:x86_64",
+                                    "@platforms//os:windows"])
 
 
