--- a/otherlibs/unix/BUILD.bazel
+++ b/otherlibs/unix/BUILD.bazel
@@ -8,7 +8,7 @@ MODULE_OPTS = ["-nostdlib"]
 SIG_OPTS = ["-nostdlib"]
 
 boot_library(
-    name = "unix_cma",
+    name = "libUnix",
     manifest  = [
         ":Unix",
         ":UnixLabels",
@@ -17,12 +17,14 @@ boot_library(
 
 compiler_module(
     name   = "Unix",
-    struct = "unix.ml",
+    struct = select({
+        "//platform/os:windows?": "unix_win32.ml",
+        "//conditions:default":   "unix_unix.ml"
+    }),
     sig    = "Unix_cmi",
     opts = MODULE_OPTS,
     deps   = [
         "//stdlib:Stdlib.Array",
-        "//stdlib:Stdlib.Bigarray",
         "//stdlib:Stdlib.Bytes",
         "//stdlib:Stdlib.Callback",
         "//stdlib:Stdlib.Fun",
@@ -40,16 +42,17 @@ compiler_signature(
     name = "Unix_cmi",
     src  = "unix.mli",
     opts = SIG_OPTS,
-    deps   = [
-        "//stdlib:Stdlib.Bigarray"
-    ]
+    deps   = ["//stdlib:Stdlib.Bigarray"]
 )
 
 compiler_module(
     name   = "UnixLabels",
     struct = "unixLabels.ml",
-    sig    = "UnixLabels_cmi",
-    opts = MODULE_OPTS,
+    sig    = "_build/unixLabels.mli",
+    # sig    = "UnixLabels_cmi",
+    opts = MODULE_OPTS + [
+        "-nolabels" # ignore labels in the cmi file
+    ],
     deps   = [
         ":Unix", ## (Otherlibs Unix Unix)
     ]
@@ -57,13 +60,11 @@ compiler_module(
 
 compiler_signature(
     name = "UnixLabels_cmi",
-    src  = "xx/unixLabels.mli",
-    opts = SIG_OPTS + [
-        "-nolabels"
-    ],
+    src  = "_build/unixLabels.mli",
+    opts = SIG_OPTS,
     deps   = [
-        ":Unix", ## (Otherlibs Unix Unix)
-        # "//stdlib:Stdlib.Bigarray"
+        "//stdlib:Stdlib",
+        ":Unix",
     ]
 )
 
@@ -71,8 +72,8 @@ compiler_signature(
 #   EXTRACAMLFLAGS += -pp "$(AWK) -f $(ROOTDIR)/stdlib/expand_module_aliases.awk"
 
 genrule(
-    name = "unixlabels_mli_awk",
-    outs = ["xx/unixLabels.mli"],
+    name = "unixLabels_mli_awk",
+    outs = ["_build/unixLabels.mli"],
     srcs = ["unixLabels.mli",
             "//stdlib:expand_module_aliases.awk"],
     cmd_bash  = " ".join([
